--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,8 +31,8 @@
     <string name="code">doesn\'t get the code?</string>
     <string name="resend">Resend</string>
     <string name="headerprofile">Header Profile</string>
-    <string name="name">Tri Tafriyadi</string>
-    <string name="bloodtype">Blood Type : B</string>
+    <string name="name">Andreas Suryadi</string>
+    <string name="bloodtype">Blood Type : O</string>
     <string name="a75">75</string>
     <string name="bloodgive">BLOOD GIVE</string>
     <string name="a100">100</string>
